--- a/src/scss/blocks/_youneedihelp.scss
+++ b/src/scss/blocks/_youneedihelp.scss
@@ -1,11 +1,20 @@
 .youneedihelp {
 
-	.youneed__heading {
-		margin-bottom: get-size('400');
-	}
+    .youneed__inner {
 
-	.ihelp__inner {
-		margin-top: get-size('800');
-	}
-	
+        ul {
+
+            li {
+                margin: get-size('400');
+            }
+        }
+    }
+
+    .youneed__heading {
+        margin-bottom: get-size('400');
+    }
+
+    .ihelp__inner {
+        margin-top: get-size('800');
+    }
 }
