--- a/src/scss/utilities/_tablealign.scss
+++ b/src/scss/utilities/_tablealign.scss
@@ -5,6 +5,7 @@
 
 table {
     margin: get-size('400') auto;
+    border-spacing: 1rem;
 }
 
 .table {
