--- a/src/scss/utilities/_wrapper.scss
+++ b/src/scss/utilities/_wrapper.scss
@@ -5,7 +5,7 @@
  */
 .wrapper {
   max-width: 70rem;
-  padding: get-size('800');
+  padding: get-size('600');
   margin: auto;
   position: relative;
 }
